cambio de color que no se veia

--- a/control-gastos/index.html
+++ b/control-gastos/index.html
@@ -83,7 +83,7 @@
           <input id="date" type="date" max="">
           <div id="err-date" class="field-error" aria-live="polite"></div>
 
-          <button class="btn w-full" data-loading-target="add-mobile">
+          <button class="btn btn--add w-full" data-loading-target="add-mobile">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M12 5v14M5 12h14" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
@@ -121,7 +121,7 @@
             <input id="dateD" type="date" max="">
             <div id="err-dateD" class="field-error" aria-live="polite"></div>
 
-            <button class="btn w-full" data-loading-target="add-desktop">
+            <button class="btn btn--add w-full" data-loading-target="add-desktop">
               <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
                 <path d="M12 5v14M5 12h14" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
